...
    var id: String {
        rawValue
    }

    var title: String {
        switch self {
        case .dashboard: "Dashboard"
        case .location: "Location"
        case .calendar: "Calendar"
        case .weather: "Weather"
        case .tasks: "Tasks"
        case .photos: "Photos"
        case .jam: "Jam"
        case .settings: "Settings"
        }
...
